# Snow-Owl

./: .dockerignore  .gitignore  BUILD_AND_TEST.md  BUILD_FIX_SUMMARY.md  BUILD_RELEASE_FIX.md  Cargo.toml  INTEGRATION_TEST_FIX.md  QUICK_REFERENCE.md  README.md  RFC_COMPLIANCE.md  build.sh  run-tests.sh
crates/snow-owl/: Cargo.toml
crates/snow-owl-core/: Cargo.toml
crates/snow-owl-core/src/: error.rs  types.rs
crates/snow-owl-db/: Cargo.toml
crates/snow-owl-db/src/: lib.rs
crates/snow-owl-http/: Cargo.toml
crates/snow-owl-http/src/: api.rs  auth.rs  ipxe.rs  lib.rs
crates/snow-owl-sftp/: Cargo.toml  DEVELOPMENT_RULES.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  RULES_SUMMARY.md  SECURITY.md  config.example.toml  verify.sh
crates/snow-owl-sftp/.github/: PULL_REQUEST_TEMPLATE.md
crates/snow-owl-sftp/docs/: CHANGELOG.md  CNSA_COMPLIANCE.md  DEVELOPMENT_RULES.md  PHASE1_COMPLETION.md  QUICK_REFERENCE.md  RFC_COMPLIANCE.md  ROADMAP.md  RULES_SUMMARY.md
crates/snow-owl-sftp/examples/: config.toml
crates/snow-owl-sftp/src/: audit.rs  auth.rs  client.rs  cnsa.rs  config.rs  connection_tracker.rs  error.rs  lib.rs  metrics.rs  protocol.rs  rate_limit.rs  server.rs  transfer_resume.rs  user_mapping.rs
crates/snow-owl-sftp/tests/: E2E_TESTING.md  advanced_file_operations_tests.rs  authentication_tests.rs  concurrent_operations_tests.rs  config_management_tests.rs  directory_operations_tests.rs  e2e_client_tests.rs  error_handling_tests.rs  file_operations_tests.rs  integration_test.rs  protocol_encoding_tests.rs  run_e2e_tests.sh  symlink_operations_tests.rs
crates/snow-owl/src/: config.rs  main.rs
crates/snow-owl/src/commands/: auth.rs  deploy.rs  image.rs  machine.rs  mod.rs  server.rs  winpe.rs
scripts/: customize-winpe.sh
scripts/winpe/: Deploy-Windows.ps1  diskpart-bios.txt  diskpart-uefi.txt  startnet.cmd
