[workspace]
resolver = "2"
members = [
    "crates/snow-owl",
    "crates/snow-owl-core",
    "crates/snow-owl-tftp",
    "crates/snow-owl-http",
    "crates/snow-owl-db",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Snow-Owl Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wing/Snow-Owl"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Networking
bytes = "1.7"
pnet = "0.35"
socket2 = "0.5"

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = "0.5"
hyper = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
