[package]
name = "snow-owl-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
snow-owl-core = { path = "../snow-owl-core" }
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
