[package]
name = "snow-owl-sftp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# Server binary
[[bin]]
name = "snow-owl-sftp-server"
path = "src/bin/server.rs"

# Client binary
[[bin]]
name = "snow-owl-sftp-client"
path = "src/bin/client.rs"

[lib]
name = "snow_owl_sftp"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for SSH/SFTP (RFC 4251-4254)
# Using russh which implements SSH protocol
# NSA CNSA 2.0: Disable RSA, use only EC algorithms (P-384, Ed25519)
russh = { version = "0.56", default-features = false, features = ["flate2", "aws-lc-rs", "async-trait"] }
russh-keys = "0.49"

# Additional dependencies for SFTP
async-trait = "0.1"
rand = "0.8"
libc = "0.2"
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.8"

# Linting and code quality enforcement
[lints.clippy]
# Deny all warnings - no exceptions
all = { level = "deny", priority = -1 }

# Pedantic lints for code quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Security-critical denies
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

# Documentation requirements
missing_docs = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
