[package]
name = "snow-owl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "snow-owl"
path = "src/main.rs"

[dependencies]
snow-owl-core = { path = "../snow-owl-core" }
snow-owl-db = { path = "../snow-owl-db" }
snow-owl-tftp = { path = "../snow-owl-tftp" }
snow-owl-http = { path = "../snow-owl-http" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
